# datacube-classification

./: README.md  README.rst  requirements.txt  setup.py
datacube_classification/: cloud.py  interp.py  models.py  sits.py  spatial_smoothing.py  spectral_index.py  version.py
datacube_classification/operations/: __init__.py  classification.py  cube.py  interpolation.py  metrics.py  regression.py
examples/classification/: CBERS4_AWFI_6BANDS_CLASSIFICATION.yml
examples/cube-spectral-index/: LC8_30_16D_STK_1.yml
examples/interpolation/: LC8_30_16D_STK_1.yml
examples/metrics/: CB4_64_16D_STK_1.yml
examples/model-train/: CBERS4_AWFI_6BANDS_RFOR.ipynb
examples/regression/: LC8_30_16D_STK_1.yml
examples/regression/product/: LC8_30_16D_STK_1_MixtureModel.yml
src/: CMakeLists.txt
src/python/: smoothing.cpp  smoothing_utils.cpp
